# Jactorio

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  azure-pipelines.yml  build.sh  runtests.sh
lib/: CMakeLists.txt  null.cpp
src/: CMakeLists.txt  jactorio.cpp
src/core/: crash_handler.cpp  execution_timer.cpp  file_system.cpp  filesystem.cpp  logger.cpp  loop_manager.cpp  utility.cpp
src/core/debug/: execution_timer.cpp
src/core/file_system/: read.cpp
src/data/: data_manager.cpp  local_parser.cpp  prototype_manager.cpp  pybind_manager.cpp  save_game_manager.cpp  unique_data_manager.cpp
src/data/cereal/: serialize.cpp
src/data/prototype/: assembly_machine.cpp  container_entity.cpp  inserter.cpp  item.cpp  mining_drill.cpp  noise_layer.cpp  recipe.cpp  recipe_group.cpp  sprite.cpp
src/data/pybind/: pybind_manager.cpp
src/data/startup/: data_cfg_parser.cpp
src/game/: game_controller.cpp  logic_loop.cpp  world_manager.cpp
src/game/event/: event.cpp
src/game/input/: input_manager.cpp  mouse_selection.cpp
src/game/logic/: conveyor_connection.cpp  conveyor_controller.cpp  conveyor_segment.cpp  conveyor_struct.cpp  conveyor_utility.cpp  deferral_timer.cpp  entity_place_controller.cpp  inserter_controller.cpp  inventory_controller.cpp  item_logistics.cpp  logic_data.cpp  placement_controller.cpp  transport_line_controller.cpp  transport_line_structure.cpp  transport_segment.cpp
src/game/logistic/: inventory.cpp
src/game/player/: keybind_manager.cpp  player.cpp  player_action.cpp  player_data.cpp  player_inventory.cpp  player_manager.cpp
src/game/world/: chunk.cpp  chunk_tile.cpp  chunk_tile_getter.cpp  chunk_tile_layer.cpp  deferral_timer.cpp  tile.cpp  update_dispatcher.cpp  world.cpp  world_data.cpp  world_generator.cpp  world_manager.cpp
src/gui/: components.cpp  gui_layout.cpp  gui_menus.cpp  gui_menus_debug.cpp  imgui_manager.cpp  layout.cpp  main_menu.cpp  menus.cpp  menus_debug.cpp
src/proto/: assembly_machine.cpp  container_entity.cpp  inserter.cpp  item.cpp  mining_drill.cpp  recipe.cpp  recipe_group.cpp  splitter.cpp  sprite.cpp
src/proto/abstract/: conveyor.cpp  entity.cpp  transport_line.cpp
src/proto/abstract_proto/: entity.cpp  transport_line.cpp
src/proto/framework/: world_object.cpp
src/proto/interface/: renderable.cpp
src/render/: data_renderer.cpp  display_window.cpp  imgui_renderer.cpp  irender_buffer.cpp  proto_renderer.cpp  render_controller.cpp  render_loop.cpp  renderer.cpp  renderer_layer.cpp  spritemap_generator.cpp  tile_renderer.cpp  trender_buffer.cpp
src/render/gui/: components.cpp  gui_layout.cpp  gui_menus.cpp  gui_menus_debug.cpp  gui_renderer.cpp  imgui_manager.cpp  main_menu.cpp
src/render/opengl/: error.cpp  index_buffer.cpp  mvp_manager.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/render/rendering/: data_renderer.cpp  renderer.cpp  renderer_layer.cpp  spritemap_generator.cpp
src/renderer/: camera.cpp  display_window.cpp  initialize.cpp  render_loop.cpp  render_main.cpp  sprite_renderer.cpp  texture.cpp  tile_renderer.cpp
src/renderer/gui/: gui_layout.cpp  gui_menus.cpp  gui_menus_debug.cpp  imgui_glfw.cpp  imgui_manager.cpp  imgui_opengl3.cpp
src/renderer/manager/: imgui_manager.cpp  mvp_manager.cpp  shader_manager.cpp  window_manager.cpp
src/renderer/opengl/: error.cpp  index_buffer.cpp  mvp_manager.cpp  renderer.cpp  shader.cpp  shader_manager.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  window_manager.cpp
src/renderer/rendering/: data_renderer.cpp  mvp_manager.cpp  position_renderer.cpp  renderer.cpp  renderer_grid.cpp  renderer_layer.cpp  renderer_manager.cpp  renderer_sprites.cpp  spritemap_generator.cpp  tile_renderer.cpp  world_renderer.cpp
src/renderer/window/: window_manager.cpp
test/: CMakeLists.txt  jactorioTests.cpp  jactorioTests.h
test/core/: convertTests.cpp  data_typeTests.cpp  dvectorTests.cpp  file_systemTests.cpp  float_mathTests.cpp  loggerTests.cpp  loop_commonTests.cpp  loop_managerTests.cpp  mathTests.cpp  orientationTests.cpp  pointer_wrapperTests.cpp  resource_guardTests.cpp  utilityTests.cpp
test/data/: data_managerTests.cpp  local_parserTests.cpp  prototype_managerTests.cpp  pybind_managerTests.cpp  save_game_managerTests.cpp  unique_data_managerTests.cpp
test/data/cereal/: serialization_typeTests.cpp  serializeTests.cpp  supportTests.cpp
test/data/prototype/: assembly_machineTests.cpp  container_entityTests.cpp  inserterTests.cpp  mining_drillTests.cpp  noise_layerTests.cpp  orientationTests.cpp  prototype_typeTests.cpp  recipeTests.cpp  spriteTests.cpp
test/data/pybind/: pybind_managerTests.cpp
test/data/startup/: data_cfg_parserTests.cpp
test/game/: eventTests.cpp  game_controllerTests.cpp  game_dataTests.cpp
test/game/input/: input_managerTests.cpp  mouse_selectionTests.cpp
test/game/logic/: conveyor_connectionTests.cpp  conveyor_controllerTests.cpp  conveyor_segmentTests.cpp  conveyor_structTests.cpp  conveyor_utilityTests.cpp  deferral_timerTests.cpp  entity_place_controllerTests.cpp  inserter_controllerTests.cpp  inventory_controllerTests.cpp  item_logisticsTests.cpp  logicTests.cpp  logic_dataTests.cpp  placement_controllerTests.cpp  transport_line_controllerTests.cpp  transport_line_structureTests.cpp  transport_segmentTests.cpp
test/game/logistic/: inventoryTests.cpp
test/game/player/: keybind_managerTests.cpp  playerTests_inventory.cpp  playerTests_placement.cpp  playerTests_recipe.cpp  playerTests_world.cpp  player_actionTests.cpp  player_dataTests.cpp  player_dataTests_inventory.cpp  player_dataTests_placement.cpp  player_dataTests_recipe.cpp  player_dataTests_world.cpp  player_managerTests.cpp
test/proto/: assembly_machineTests.cpp  container_entityTests.cpp  inserterTests.cpp  mining_drillTests.cpp  noise_layerTests.cpp  prototype_typeTests.cpp  recipeTests.cpp  splitterTests.cpp  spriteTests.cpp
test/render/: mvp_managerTests.cpp  spritemap_generatorTests.cpp
test/renderer/: openglTests.cpp  render_mainTests.cpp
(+362 files in other folders)
